# account-pilot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.example.accountpilot.yaml  pyproject.toml
.claude/: ralph-loop.local.md
.claude/commands/: run-all-plans.md
.github/workflows/: ci.yml
ae-cc/planning/: BRIEF.md  ROADMAP.md
ae-cc/planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
ae-cc/planning/phases/02-sync-idle/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
ae-cc/planning/phases/03-search-tags/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
ae-cc/planning/phases/04-send-crud/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
ae-cc/planning/phases/05-cli-open-source/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
docs/how-to/: README.md  ap-sp1-acceptance-guide.md
docs/plans/: 2026-05-01-accountpilot-ap-sp0-foundation.md  2026-05-02-accountpilot-ap-sp1.md  2026-05-02-accountpilot-ap-sp2.md
docs/specs/: 2026-05-01-storage-rewrite-design.md
skill/: SKILL.md
skill/references/: configuration.md  query-syntax.md
src/accountpilot/: __init__.py  __main__.py  cli.py
src/accountpilot/core/: auth.py  cas.py  config.py  identity.py  models.py  plugin.py  storage.py
src/accountpilot/core/cli/: accounts_cmds.py  db_cmds.py  people_cmds.py  search_cmd.py  setup_cmd.py  status_cmd.py
src/accountpilot/core/db/: connection.py
src/accountpilot/core/db/migrations/: 001_init.sql  __init__.py
src/accountpilot/plugins/mail/: __init__.py  cli.py  config.py  oauth.py  parser.py  plugin.py  sync.py
src/accountpilot/plugins/mail/imap/: __init__.py  client.py  idle.py
src/accountpilot/plugins/mail/providers/: __init__.py  gmail.py  outlook.py
src/mailpilot/: __init__.py  __main__.py  cli.py  config.py  daemon.py  database.py  models.py  oauth.py
src/mailpilot/events/: __init__.py  emitter.py  types.py
src/mailpilot/imap/: __init__.py  client.py  idle.py  parser.py  sync.py
src/mailpilot/providers/: __init__.py  gmail.py  outlook.py
src/mailpilot/search/: __init__.py  indexer.py  query.py  threading.py
src/mailpilot/smtp/: __init__.py  client.py  composer.py  exceptions.py
src/mailpilot/tags/: __init__.py  manager.py  rules.py
tests/: conftest.py  test_api.py  test_cli.py  test_composer.py  test_config.py  test_daemon.py  test_database.py  test_events.py  test_idle.py  test_imap_client.py  test_parser.py  test_search.py  test_smtp.py  test_sync.py  test_tags.py  test_threading.py
tests/accountpilot/: conftest.py
tests/accountpilot/plugins/mail/: test_cli.py  test_idle.py  test_imap_response_parsing.py  test_parser.py
tests/accountpilot/unit/cli/: test_search_cmd.py
tests/accountpilot/unit/core/: test_auth.py  test_db_migrations.py  test_identity_find_or_create.py  test_identity_merge.py  test_identity_normalize.py  test_models.py  test_storage_helpers.py  test_storage_save_email.py
