[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accountpilot"
version = "0.1.0"
description = "Unified per-machine account sync framework — email, calendar, iMessage, Telegram, WhatsApp"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "ae" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Email Clients (MUA)",
    "Typing :: Typed",
]
dependencies = [
    "aioimaplib",
    "aiosmtplib",
    "aiosqlite",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml",
    "python-dateutil",
    "mail-parser",
    "msal",
    "phonenumbers>=8.13",     # E.164 normalization for identity
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "pre-commit",
]

[project.scripts]
accountpilot = "accountpilot.cli:cli"

[project.entry-points."accountpilot.plugins"]
mail = "accountpilot.plugins.mail.plugin:MailPlugin"

[project.urls]
Homepage = "https://github.com/aren13/account-pilot"
Repository = "https://github.com/aren13/account-pilot"
Issues = "https://github.com/aren13/account-pilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/accountpilot"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"          # NEW: pytest-asyncio runs all async tests automatically
pythonpath = [".", "src"]      # NEW: lets integration tests import tests.accountpilot.fixtures.*

[tool.mypy]
python_version = "3.11"
strict = true
